--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #732283;
-  --ifm-color-primary-dark: #681f76;
-  --ifm-color-primary-darker: #621d6f;
-  --ifm-color-primary-darkest: #51185c;
-  --ifm-color-primary-light: #7f2590;
-  --ifm-color-primary-lighter: #842797;
-  --ifm-color-primary-lightest: #962caa;
+  --ifm-color-primary: #613183;
+  --ifm-color-primary-dark: #572c76;
+  --ifm-color-primary-darker: #522a6f;
+  --ifm-color-primary-darkest: #44225c;
+  --ifm-color-primary-light: #6b3690;
+  --ifm-color-primary-lighter: #703897;
+  --ifm-color-primary-lightest: #7e40aa;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #ec7fff;
-  --ifm-color-primary-dark: #e659ff;
-  --ifm-color-primary-darker: #e346ff;
-  --ifm-color-primary-darkest: #db0cff;
-  --ifm-color-primary-light: #f2a5ff;
-  --ifm-color-primary-lighter: #f5b8ff;
-  --ifm-color-primary-lightest: #fdf2ff;
+  --ifm-color-primary: #ad90b5;
+  --ifm-color-primary-dark: #9f7ca8;
+  --ifm-color-primary-darker: #9773a2;
+  --ifm-color-primary-darkest: #7f5b89;
+  --ifm-color-primary-light: #bba3c2;
+  --ifm-color-primary-lighter: #c3adc9;
+  --ifm-color-primary-lightest: #d8cadc;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
