--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,7 +31,7 @@
 
 
 div[class^="announcementBar_"][role="banner"] {
-  background-color: #fafbfc;
+  background-color: #613183;
   height: auto;
 }
 
@@ -40,15 +40,29 @@ div[class^="announcementBar_"][role="banner"] button.close svg {
 }
 
 div[class*="announcementBarContent"] {
-  line-height: 40px;
-  font-size: 15px;
+  line-height: 30px;
+  font-size: 20px;
   font-weight: bold;
   padding: 8px 30px;
-  color: #091E42;
+  color: #ffffff;
 }
 
 div[class*="announcementBarContent"] a {
   text-decoration: underline;
   display: inline-block;
   color: var(--brand) !important;
+}
+
+.rowHero {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 1100px) {
+  .rowHero {
+      align-items: left;
+      flex-direction: column; /* Stack items vertically */
+
+  }
 }
