--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -53,6 +53,15 @@ div[class*="announcementBarContent"] a {
   color: var(--brand) !important;
 }
 
+
+.iosVideo {
+    width: auto;
+    height: auto;
+    border: 2px solid #000; /* Black border color */
+    border-radius: 4px; /* Smaller rounding */
+    justify-content: center;
+}
+
 .rowHero {
   display:flex;
   justify-content: center;
@@ -60,9 +69,22 @@ div[class*="announcementBarContent"] a {
 }
 
 @media screen and (max-width: 1100px) {
-  .rowHero {
-      align-items: left;
-      flex-direction: column; /* Stack items vertically */
-
-  }
+    .rowHero {
+        flex-direction: column;
+        align-items: stretch; /* This will make the children (columns) stretch to match the parent's width */
+      }
+    
+      .rowHero .col {
+        width: 100%; /* Set the width of each column to be 100% of its parent */
+      }
+    
+      /* Adjust the video to be responsive and maintain its aspect ratio */
+      .iosVideo {
+        width: 100%;
+        height: auto;
+      }
+    div[class*="announcementBarContent"] {
+        line-height: 25px;
+        font-size: 15px;
+    }
 }
