--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,7 +31,7 @@
 
 
 div[class^="announcementBar_"][role="banner"] {
-  background-color: #613183;
+  background-color: #F44336;
   height: auto;
 }
 
