--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -55,11 +55,10 @@ div[class*="announcementBarContent"] a {
 
 
 .iosVideo {
-    width: auto;
+    width: 100%;
     height: auto;
     border: 2px solid #000; /* Black border color */
     border-radius: 4px; /* Smaller rounding */
-    justify-content: center;
 }
 
 .rowHero {
