--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -55,8 +55,8 @@ div[class*="announcementBarContent"] a {
 
 
 .iosVideo {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 670px;
     border: 2px solid #000; /* Black border color */
     border-radius: 4px; /* Smaller rounding */
 }
